// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/EmptyContent should correctly render 1`] = `
<div
  className="metadata-instance-editor-no-instances"
>
  <IconAddMetadataEmptyState />
  <p
    className="metadata-instance-editor-no-instances--call-out"
  >
    <FormattedMessage
      defaultMessage="No Metadata Applied"
      id="boxui.metadataInstanceEditor.noMetadata"
    />
  </p>
</div>
`;

exports[`features/metadata-instance-editor/EmptyContent should correctly render edit mode when canAdd is passed 1`] = `
<div
  className="metadata-instance-editor-no-instances"
>
  <IconAddMetadataEmptyState />
  <p
    className="metadata-instance-editor-no-instances--call-out"
  >
    <FormattedMessage
      defaultMessage="No Metadata Applied"
      id="boxui.metadataInstanceEditor.noMetadata"
    />
  </p>
  <p
    className="metadata-instance-editor-no-instances--how-add-template"
  >
    <FormattedMessage
      defaultMessage="Click 'Add' in the top right to add metadata to this item"
      id="boxui.metadataInstanceEditor.noMetadataAddTemplate"
    />
  </p>
</div>
`;
